added beer button

--- a/public/index.html
+++ b/public/index.html
@@ -450,6 +450,15 @@
                 </md-button>
             </div>
         </md-card>
+        <md-content class="layout-padding">
+            <a href="https://www.paypal.me/leshem7" target="_blank">
+                <md-tooltip>הכל פה חינם וניתן במתנה, אבל אם בא לכם לתת גם, זה המקום :)</md-tooltip>
+                <md-button class="md-raised md-primary">
+                    <md-icon>card_giftcard</md-icon>
+                    <span>הזמינו אותי לבירה :) 🍺</span>
+                </md-button>
+            </a>
+        </md-content>
     </md-content>
 </md-content>
 </body>
