--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                     </md-select>
                 </md-input-container>
                 <md-button class="md-raised md-accent some-margin"
-                           ng-disabled="!nameColumnIndex || !guestCountColumnIndex || !phoneNumberColumnIndex || promise"
+                           ng-disabled="nameColumnIndex === undefined || guestCountColumnIndex === undefined || phoneNumberColumnIndex === undefined || promise"
                            ng-click="importData($event)">יבא נתונים
                 </md-button>
             </div>
